--- a/main.css
+++ b/main.css
@@ -9,3 +9,15 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+
+
+#red{ background-color:red;  }
+
+#orange{ background-color:white;  }
+
+#yellow{ background-color:yellow;  }
+#green{ background-color:orange;  }
+#blue{ background-color:gray;  }
+#indigo{ background-color:green;  }
+#violet{ background-color:green;  }
